--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/index.html">ICNWG</a>
+          <a class="brand" href="{{site.baseurl}}/">ICNWG</a>
           <div class="nav-collapse">
             <ul class="nav">
               {% assign pages_list = site.pages | sort:"weight" %}
