--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
-    <p>
+    <p class="text-center">
     	<a href="http://github.com/webshootertk">webshootertk</a> &bull;
     	<a href="http://github.com/webshootertk/webshooter">webshooter</a> &bull;
-    	<a href="#">Privacy &amp; Legal Notice</a>
+    	<a href="https://www.llnl.gov/disclaimer.html">Privacy &amp; Legal Notice</a>
+       * LLNL-WEB-657097
     </p>
 </footer>
