--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,4 +12,12 @@ layout: default
     {{ content }}
   </article>
 
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" style="float: left;" href="{{site.baseurl}}{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" style="float: right;" href="{{site.baseurl}}{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
 </div>
